# low-latency-trading

./: .gitignore  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  latency_benchmark.cpp
examples/: CMakeLists.txt  simulator.cpp
include/trading/core/: execution_engine.h  market_data.h  order_book.h  strategy_engine.h
include/trading/support/: config.h  logger.h
include/trading/utils/: lockfree_queue.h  memory_pool.h  timekeeper.h
src/core/: execution_engine.cpp  market_data.cpp  order_book.cpp  strategy_engine.cpp
src/support/: config.cpp  logger.cpp
src/utils/: memory_pool.cpp  timekeeper.cpp
